--- a/src/components/Pagination/Pagination.scss
+++ b/src/components/Pagination/Pagination.scss
@@ -1,7 +1,7 @@
 .pagination{
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+   // margin-top: 20px;
     list-style-type: none;
 
     .paginaiton-active {
@@ -9,14 +9,14 @@
         background-color: var(--primary-color);
         color: #fff !important;
         padding: 0 12px;
-        height: 32px;
-        min-width: 32px;
+        height: 28px;
+        min-width: 28px;
         text-align: center;
         margin: auto 4px;
        // color: rgba(0, 0, 0, 0.87);
         display: flex;
         align-items: center;
-        border-radius: 16px;
+       // border-radius: 16px;
         line-height: 1.43;
         font-size: 1.5rem;        
         border: 1px solid var(--primary-color);
@@ -29,14 +29,14 @@
 
     .pagination-item{
         padding: 0 12px;
-        height: 32px;
-        min-width: 32px;
+        height: 28px;
+        min-width: 28px;
         text-align: center;
         margin: auto 4px;
         color: rgba(0, 0, 0, 0.87);
         display: flex;
         align-items: center;
-        border-radius: 16px;
+       // border-radius: 16px;
         line-height: 1.43;
         font-size: 1.5rem;        
         border: 1px solid var(--primary-color);
