--- a/src/pages/admin/components/Product/Product.scss
+++ b/src/pages/admin/components/Product/Product.scss
@@ -1,48 +1,13 @@
-.product__title{
-    font-size: 2.8rem;
-    font-weight: 600;
-    margin-bottom: 20px;
-
-}
-
-.product{
-    &__list{
-        thead{
-            height: 40px;
-        }
-        & th:nth-child(2){
-            width: 400px;
-        }
-        tbody{
-            tr{
-            
-            }
-        }
-    }
-
-    &__control{
+.admin__product{
+    .product__header{
         display: flex;
+        align-items: center;
         justify-content: space-between;
-        margin-bottom: 10px;
+        border-bottom: 2px solid #ccc;
+        padding-bottom: 10px;
+        margin-bottom: 14px;
 
-        .product__search{
-
-            &-input{
-                width: 50%;
-                outline: none;
-                padding-left: 8px;
-                height: 30px;
-                width: 300px;
-                margin-right: 4px;
-            }
-
-            &-select{
-                height: 30px;
-                margin-right: 4px;
-            }
-        }
-
-        .product__btn{
+        .product__btn-add{
             background-color: var(--extra-color);
             outline: none;
             border: none;
@@ -53,7 +18,85 @@
             cursor: pointer;
         }
     }
+
+    .product__content{
+        border: 1px solid var(--extra-color);
+
+        .product__title{
+            background-color: var(--extra-color);
+            color: #fff;
+            padding: 10px;
+        }
+
+        .product__body{
+            padding: 10px;
+            .product__control{
+                display: flex;
+                justify-content: space-between;
+                margin-bottom: 10px;
+    
+                .product__show-record-page{
+                    select{
+                        height: 30px;
+                        width: 50px;
+                    }
+                }
+        
+                .product__search{
+        
+                    &-input{
+                        width: 50%;
+                        outline: none;
+                        padding-left: 8px;
+                        height: 30px;
+                        width: 300px;
+                        margin-right: 4px;
+                    }
+        
+                    &-select{
+                        height: 30px;
+                        margin-right: 4px;
+                    }
+                }
+        
+                
+            }
+
+            .product__list{
+                thead{
+                    text-align: left;
+                    height: 40px;
+                    
+                    th{
+                        padding-left: 10px;
+                    }
+                    & th:nth-child(2){
+                        width: 400px;
+                    }
+                }
+               
+                tbody{
+                    text-align: left;
+                    
+                    tr td{
+                     padding-left: 10px;
+                    }
+                }
+            }
+        }
+
+        .product__footer{
+            display: flex;
+            justify-content: space-between;
+            margin-top: 6px;
+            
+            .product__show-record{
+                font-size: 1.5rem;
+            }
+        }
+    }
 }
+
 
 .product__form{
     padding: 20px;
