--- a/src/pages/admin/components/Sidebar/Sidebar.scss
+++ b/src/pages/admin/components/Sidebar/Sidebar.scss
@@ -13,7 +13,7 @@
 
     &__logo{
         margin-bottom: 10px;
-        font-size: 3rem;
+        font-size: 2.8rem;
         font-weight: 600;
         color: #fff;
         border-bottom: 1px solid #fff;
@@ -26,16 +26,20 @@
         flex-direction: column;
 
         .active{
+            color: #fff;
             font-weight: 600;
             text-decoration: none;
-            padding: 6px 18px;
-            font-size: 1.8rem;
-            color: #fff;
+            padding-left: 18px;
+            
         }
 
         &-item{
             list-style: none;
-            margin: 10px 0;
+            margin: 6px 0;
+            padding: 6px 4px;
+            &:hover{
+                background-color: rgba(0,0,0,0.2);
+            }
 
             .sidebar__list-link{
                 color: #fff;
