--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -1,104 +1,93 @@
-.product-card{
-    background-color: #fff;
-    border: 1px solid #f1f1f1;
-    margin-left: -1px;
-    padding: 12px;
-    cursor: pointer;
-    width: 20%;
-   
-    .product-card__link{
-        text-decoration: none;
-        color: #000;
-       
-        .product-card__image{
-            width: 100%;
-            border-radius: 20px;
-            height: 220px;
-            object-fit: contain;
-            &:hover{
-                transform: translateY(-10px);
-                transition: 0.3s ease;
-            }
-        }
-    
-        .product-card__info{
+.product__card {
+  background-color: #fff;
+  border: 1px solid #f1f1f1;
+  width: 20%;
+  padding: 16px;
+  cursor: pointer;
+  overflow: hidden;
+  //margin-left: -1px;
+  //margin-right: -1px;
 
-            .product-card__name{
-                font-weight: 300;
-                font-size: 1.4rem;
-
-                //Text Truncation
-                // white-space: nowrap;
-                // overflow: hidden;
-                // text-overflow: ellipsis;
-
-                //Multiple Line Text Truncation
-                display: -webkit-box;
-                -webkit-line-clamp: 2;
-                -webkit-box-orient: vertical;
-                overflow: hidden;
-
-            }
-
-            .product-card__rating{
-                display: flex;
-                align-items: center;
-                justify-content: flex-start;
-                gap: 4px;
-
-                .product-card__rating-item{
-                    list-style: none;
-
-                    .product-card__rating-icon{
-                        color: rgb(243, 181, 25);
-                        font-size: 1.1rem;
-                        padding: 6px 0;
-                    }
-                }
-            }
-            
-            .product-card__price{
-
-                .product-card__price-sale{
-                    color: var(--main-color);
-                    font-weight: bold;
-                    font-size: 1.5rem;
-                    padding-right: 8px;
-                    sup{
-                        font-size: 1.2rem;
-                        font-weight: 800;
-                        text-decoration: underline;
-                    }
-                }
-
-                .product-card__price-old{
-                    font-size: 1.5rem;
-                    color: rgba(0,0,0,0.5);
-                    text-decoration: line-through;
-                }
-            }
-        }
-    }
-    
-}
-@media screen and (min-width: 769px) and (max-width: 1024px){
-       
-    .product-card{
-        width: 33.3334%;
-    }
-}
-
-@media screen and (max-width: 769px){
-    .product-card{
-        width: 50%;
-    }
-}
-
-.product-card__image-loading{
-    width: 100%;
+  &__image {
+    object-position: 100% 100%;
+    object-fit: contain;
+    width: 80%;
     height: 180px;
+    margin-bottom: 10px;
+    position: relative;
+    left: 10%;
+    right: 0;
+
+    &:hover {
+      transform: scale(1.05);
+      transition: 0.3s ease;
+    }
+  }
+
+  &__info {
+    .product__card__name {
+      font-weight: 300;
+      font-size: 1.4rem;
+
+      //Text Truncation
+      // white-space: nowrap;
+      // overflow: hidden;
+      // text-overflow: ellipsis;
+
+      //Multiple Line Text Truncation
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+    }
+
+    .product__card__rating {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      gap: 4px;
+
+      &-item {
+        list-style: none;
+
+        .product__icon {
+          color: rgb(243, 181, 25);
+          font-size: 1.1rem;
+          padding: 6px 0;
+        }
+      }
+    }
+
+    .product__card__price {
+      .price__sale {
+        color: var(--main-color);
+        font-weight: bold;
+        font-size: 1.5rem;
+        padding-right: 8px;
+        sup {
+          font-size: 1.2rem;
+          font-weight: 800;
+          text-decoration: underline;
+        }
+      }
+
+      .price {
+        font-size: 1.5rem;
+        color: rgba(0, 0, 0, 0.5);
+        text-decoration: line-through;
+      }
+    }
+  }
 }
-.product-cart__item-loading{
-    width: 100%;
-    height: 20px;
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .product__card {
+    width: 33.3334%;
+  }
+}
+
+@media screen and (max-width: 769px) {
+  .product__card {
+    width: 50%;
+  }
 }
