--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,75 +1,76 @@
-.product__list{
-    border-left: 1px solid #f1f1f1;
-    border-top: 1px solid #f1f1f1;
-}
+//css new
+.product__category {
+  margin: 20px 0;
+  background-color: #fff;
+  border-radius: 8px;
+  overflow: hidden;
 
-.product__category__title{
-    max-width: 940px;
-    margin: 0 auto 20px;
-    font-size: 2.4rem;
-    text-transform: uppercase;
-    font-weight: 700;
-    text-align: center;
-    position: relative;
-    color: #ffea00;
+  &__heading {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 16px;
 
-    span{
-        padding: 4px 20px;
-        z-index: 2;
-        position: relative;
-        background: #2a3740;
-
+    & span:first-child {
+      text-transform: uppercase;
+      font-size: 2.2rem;
+      font-weight: 600;
     }
 
-    &::after{
-        content: "";
-        width: 100%;
-        height: 1px;
-        background-color: #ccc;
-        position:absolute;
-        top: 50%;
-        left: 0;
-        z-index: 1;
+    & span:nth-child(2) {
+      a {
+        color: #aaa;
+        font-size: 1.5rem;
+
+        &:hover {
+          color: #1435c3;
+        }
+      }
     }
-}
+  }
 
-
-.product__category__list{
-    border-left: 1px solid #f1f1f1;
-    margin-right: -1px;
-}
-
-.product__cate-list{
+  &__list {
     display: flex;
     flex-wrap: wrap;
-}
-
-.loading-brand{
-    width: 100%;
-    height: 300px;
-}
-.loading-name{
-    width: 240px;
-    height: 20px;
-}
-
-.product__show-all{
-    margin-top: 10px;
-    display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: space-between;
 
-    .product__show-link{
-        padding: 10px 28px;
-        border-radius: 6px;
-        font-weight: 400;
-        border: 1px solid var(--extra-color);
-        color: var(--extra-color);
-        background-color: transparent;
-        font-size: 1.5rem;
-        &:hover{
-            background-color: var(--extra-color);
-            color: #fff;
-        }
-    }
+    //border-left: 1px solid #f1f1f1;
+    //margin-right: -1px;
+  }
 }
+
+//css old
+.produc t__list {
+  border-left: 1px solid #f1f1f1;
+  border-top: 1px solid #f1f1f1;
+}
+
+// .product__category__title {
+//   max-width: 940px;
+//   margin: 0 auto 20px;
+//   font-size: 2.4rem;
+//   text-transform: uppercase;
+//   font-weight: 700;
+//   text-align: center;
+//   position: relative;
+//   color: #ffea00;
+
+//   span {
+//     padding: 4px 20px;
+//     z-index: 2;
+//     position: relative;
+//     background: #2a3740;
+//   }
+
+//   &::after {
+//     content: "";
+//     width: 100%;
+//     height: 1px;
+//     background-color: #ccc;
+//     position: absolute;
+//     top: 50%;
+//     left: 0;
+//     z-index: 1;
+//   }
+// }
