--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -1,28 +1,30 @@
 @import url("https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
- *, *::after, *::before{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+*,
+*::after,
+*::before {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-html{
-    font-size: 62.5%;
+html {
+  font-size: 62.5%;
 }
 
-body{
-    font-family: "Roboto", sans-serif;
-    font-size: 1.5rem;
-    background-color: #f8f8fc;
-    color: #333333;
-    //line-height: 1.25rem;
+body {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.5rem;
+  background-color: #f8f8fc;
+  color: #333333;
+  //line-height: 1.25rem;
 }
 
-
-img{
-    width: 100%;
+img {
+  width: 100%;
 }
 
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
+  color: #000;
 }
